# LOTUSim

./: .clang-format  .env  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_lotusim  Dockerfile_rosgz_base  GOVERNANCE.md  Makefile  README.md  config-lotus.sh  dockerfile  launch-lotus.sh  launch-rqt.sh  launch-xdynSurface.sh  launch-xdynUnderwater.sh  rviz_config.rviz  sonar-project.properties  xdyn.md
agent_demo_cpp/: CMakeLists.txt  package.xml
agent_demo_cpp/src/: agent_demo_node.cpp
applications/currents_visu/: CMakeLists.txt  package.xml
applications/currents_visu/src/: current_marker.cpp  drone_marker.cpp
applications/keyboard_control/: keyboard_control.py  package.xml  setup.cfg  setup.py
applications/map_interface/: CMakeLists.txt  README.md  package.xml
applications/map_interface/src/: map_interface.cpp
applications/unity_interface/: CMakeLists.txt  README.md  package.xml
applications/unity_interface/src/: unity_interface.cpp
assets/: CMakeLists.txt  package.xml
assets/launch/: gz_test_vessel.launch.py
assets/models/5415_hull/: 5415_hull.stl  README.md  dtmb-wave-propeller-PID.yml  model (copy).sdf  model.config  model.sdf  waves.h5  xdyn_test.yml
assets/models/auv/: model.config  model.sdf
assets/models/bluerov2_heavy/: BlueROV2.yml  model-battery.sdf  model-sensors-gazebo.sdf  model.config  model.sdf
assets/models/boat/: model.config  model.sdf
assets/models/boat_small/: model.config  model.sdf
assets/models/commando/: commandoConfig.yaml  model-sensors-gazebo.sdf  model.config  model.sdf  preview
assets/models/cube/: cube.stl  model.config  model.sdf
assets/models/dtmb_hull/: dtmb-wave-propeller-PID-xdyn.yml  dtmb-wave-propeller-PID.yml  dtmb-xdyn-faster.yml  dtmb-xdyn.yml  model.config  model.sdf  preview
assets/models/duck/: model.sdf
assets/models/eca_a9/: model.config  model.sdf  preview
assets/models/fremm/: fremmConfig.yaml  model.config  model.sdf  preview
assets/models/landscape/: model.config  model.sdf
assets/models/lrauv/: lrauv.yml  lrauv_old.yml  lrauv_xdyn.stl  model-sensors-gazebo.sdf  model.config  model.sdf  preview
assets/models/lrauv_float/: model.sdf
assets/models/lrauv_mas1/: model.config  model.sdf
assets/models/lrauv_mas2/: model.sdf
assets/models/lrauv_mas3/: model.sdf
assets/models/lrauv_mas4/: model.sdf
assets/models/lrauv_xdyn/: lrauv.yml  model.config  model.sdf  model.xacro
assets/models/mine/: mineConfig.yaml  model.config  model.sdf  preview
assets/models/mine_model_only/: model.config
assets/models/mine_sinking/: model.config  model.sdf
assets/models/ocean_waves/: model.sdf
assets/models/offshore_wind_turbine/: model.config  model.sdf  preview
assets/models/pha/: model.config  model.sdf  phaConfig.yaml
assets/models/regular_waves/: model.sdf
assets/models/rexrov2/: model.config  model.sdf  preview
assets/models/sand_heightmap/: model.sdf
assets/models/sea_background/: model.config  model.sdf
assets/models/test_ship/: model.config  model.sdf  test_ship-old.stl  test_ship.hdb  test_ship_in_waves.yml  testship-nowave-static.yml
assets/models/tethys/: model_test (copy).sdf  model_test.sdf  model_test3.sdf
assets/models/wamv/: model-battery.sdf  model.config  model.sdf  preview  wamv.yaml  wamv.yml  wamv_simplified.yaml
assets/models/waves/: model.sdf
assets/models/wind_turbine/: model.config  model.sdf
assets/models/x500/: model-battery.sdf  model.config  model.sdf
assets/models/x500_base/: model.config  model.sdf
assets/scenarios/: demo.yaml
assets/worlds/: SilentStorm.world  aerialWorld.world  agent_demo_ros.world  circling_ship_example.world  contact_test.world  defenseScenario.world  energy.world  gz_sensor_example.world  lotusim.world  mas_test.world  ngfe_full_sys_test.world  no_xdyn_test.world  poc_canard.world  poc_test.world  poc_test_mas.world  poc_wind_turbine.world  vessel_test.world  vessel_wave.world  wave.world  world_mas.sdf  xdyn.world  xdyn_copy.world  xdyn_mas.world  xdyn_multithread_test.world  xdyn_test.world  xdyn_test_cedric.world  xdyn_underwater.world
assets/worlds/aerial/: README.md  poc_aerial_jacob.world  poc_aerial_spatial_demo.world  poc_aerial_time_variations_demo.world  poc_multiple_drones.world
assets/worlds/battery/: README.md  poc_battery.world
assets/worlds/current/: poc_current.world
assets/worlds/drl/: README.md  poc_drl.world
bringup/: CMakeLists.txt  (+1 more)
examples/cpp_examples/: CMakeLists.txt  README.md  package.xml
examples/cpp_examples/src/: controlling_ships.cpp  detection_radar.cpp  spawn_ships.cpp
gazebo/gz_entity_management/: CMakeLists.txt  gz_entity_management.cpp  gz_entity_management.hpp  package.xml
gazebo/gz_explosive_mine/: .gitignore  CMakeLists.txt  README.md  test_world.sdf
gazebo/gz_liquidai_msgs/: CMakeLists.txt  package.xml
gazebo/gz_logging_plugin/: CMakeLists.txt  LoggingSystem.cc  LoggingSystem.hh  package.xml
gazebo/sensor_plugins/: CMakeLists.txt  package.xml
gazebo/world_plugins/: CMakeLists.txt  README.md  package.xml
interfaces/: CMakeLists.txt  package.xml
interfaces/lotusim_msgs/: CMakeLists.txt  package.xml
interfaces/lotusim_sensor_msgs/: CMakeLists.txt  package.xml
interfaces/msg/: AIS.msg  AISArray.msg  AddEntity.msg  EntityPosition.msg  Event.msg  MASCmd.msg  VesselCmdArray.msg  VesselPosition.msg  WaveParam.msg  XdynThrustercmd.msg  Xdyncmd.msg
interfaces/srv/: AddEntitySrv.srv  AddEntitySrvArray.srv  GetIdByName.srv  GetModelProperties.srv  GetModelSphericalCoord.srv  GetThrusterConversionFcn.srv  SetModelSphericalCoord.srv
launch/: CMakeLists.txt  bash_completion.sh  entrypoint.sh  install_dep.sh  lotusim  lotusim_first_run.sh  ros_bridge.launch.py  xdynSurface_example  xdynUnderwater_example
launch/src/: README.md  bash_completion.sh  lotusim.cpp  lotusim_full.cpp
msgs/: CMakeLists.txt  package.xml
ros2/agent_cpp/: CMakeLists.txt  package.xml
ros2/agent_demo_cpp/: package.xml
ros2/entity_management/: CMakeLists.txt  package.xml
ros2/simulation_control/: CMakeLists.txt  package.xml
(+597 files in other folders)
