<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assets</name>
  <version>1.4.0</version>
  <description>Models and other media used for liquidAi testing. Models are taken from other opensource repos</description>
  <maintainer email="malcom.neo@fe.naval-group.com">malcom</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
