<?xml version="1.0"?>
<package format="3">
  <name>liquidai_msgs</name>
  <version>0.0.1</version>
  <description>The liquidai_msgs msgs to bridge from gazebo to ros2 and the required plugins</description>

  <maintainer email="malcom.neo@fe.naval-group.com">Malcom</maintainer>

  <author email="malcom.neo@fe.naval-group.com">Malcom</author>
  <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
  <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
