<?xml version="1.0"?>
<package>
  <name>keyboard_control</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for vessel. Changed from teleop keyboard.</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>