<?xml version="1.0"?>
<package format="3">
  <name>map_interface</name>
  <version>0.0.1</version>
  <description>Map interface to publish AIS data to external map server.</description>

  <maintainer email="malcom.neo@fe.naval-group.com">Malcom</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>liquidai_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
