<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_entity_management</name>
  <version>1.0.0</version>
  <description>
    Plugin to provide Gazebo entity management through ros2 services
  </description>

  <maintainer email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>gz_cmake_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_common_vendor</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend> -->
  <depend>gz-cmake3</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-common5</depend>
  <depend>gz-sim8</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-transport13</depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_step_control_interface</depend>
  <depend>liquidai_msgs</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>