<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>gz_logging_plugin</name>
    <version>0.0.1</version>
    <description></description>

    <maintainer email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</maintainer>

    <author email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</author>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- <depend>gz_cmake_vendor</depend>
    <depend>gz_plugin_vendor</depend>
    <depend>gz_common_vendor</depend>
    <depend>gz_sim_vendor</depend> -->
    <depend>gz-plugin2</depend>
    <depend>gz-common5</depend>
    <depend>gz-sim8</depend>
    <depend>sdformat14</depend>
    <depend>liquidai_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>