<?xml version="1.0"?>
<package format="3">
  <name>lotusim_sensor_msgs</name>
  <version>0.0.1</version>
  <description>The lotusim_msgs msgs to bridge from gazebo to ros2 and the required plugins</description>

  <maintainer email="malcom.neo@fe.naval-group.com">Malcom</maintainer>

  <author email="malcom.neo@fe.naval-group.com">Malcom</author>

  <license>EPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>message_generation</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>